Fix nav spacing

--- a/docs/assets/scss/dialtone--docs.scss
+++ b/docs/assets/scss/dialtone--docs.scss
@@ -62,6 +62,7 @@ body {
     letter-spacing: -0.5px;
 }
 .dds-docs--header {
+    margin-bottom: $sp4;
     font-size: $fs-headline;
     font-weight: 700;
 }
